[package]
name = "bootnextr"
version = "0.1.0"
description = "A utility to set the BootNext EFI NVRAM variable. Boot straight to selected OS on ONLY the next time your PC boots up."
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true

[dependencies]
# important crates
clap = { version = "4.5.38", features = ["derive", "unicode"] }
regex = "1.11.1"
# nice to have crates
cfg-if = "1.0.0"
tabled = "0.19.0"
nameof = "1.2.2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30.1", features = ["user"] }
